# opencli-rs

./: .gitignore  AGENTS.md  CHANGELOG_pipeline.md  Cargo.toml  README.ja.md  README.md  README.zh.md
.github/workflows/: deploy-microservice.yml  release.yml
.playwright-cli/: page-2026-05-06T12-05-18-950Z.yml  page-2026-05-06T12-06-18-532Z.yml
.playwright-mcp/: page-2026-05-06T12-06-41-467Z.yml
.serena/: project.yml
.serena/memories/: project_summary.md  style_and_conventions.md  suggested_commands.md  task_completion.md
adapters/linkedin/: recommended.yaml
adapters/twitter/: search.yaml
adapters/youtube/: comment.yaml  comments.yaml
crates/autocli-browser/src/: bridge.rs  cdp.rs  daemon.rs  daemon_client.rs  lib.rs  page.rs  types.rs
crates/autocli-cli/: Cargo.toml
crates/autocli-cli/src/: main.rs
crates/autocli-cli/src/commands/: doctor.rs  mod.rs  read.rs
crates/autocli-discovery/src/: yaml_parser.rs
crates/autocli-pipeline/: Cargo.toml
crates/autocli-pipeline/src/steps/: fetch.rs
crates/opencli-rs-ai/: Cargo.toml
crates/opencli-rs-ai/prompts/: generate-adapter.md
crates/opencli-rs-ai/src/: ai_generate.rs  cascade.rs  config.rs  explore.rs  generate.rs  lib.rs  llm.rs  synthesize.rs  types.rs
crates/opencli-rs-browser/: Cargo.toml
crates/opencli-rs-browser/examples/: direct_cdp.rs  direct_cdp_headed.rs
crates/opencli-rs-browser/src/: bridge.rs  browser_detection.rs  browser_launcher.rs  cdp.rs  daemon.rs  daemon_client.rs  lib.rs  page.rs
crates/opencli-rs-cli/: Cargo.toml
crates/opencli-rs-cli/src/: args.rs  execution.rs  i18n.rs  main.rs
crates/opencli-rs-cli/src/commands/: doctor.rs  mod.rs
crates/opencli-rs-core/src/: args.rs  command.rs  lib.rs  page.rs  registry.rs  strategy.rs
crates/opencli-rs-discovery/: build.rs
crates/opencli-rs-discovery/src/: builtin.rs  lib.rs  user.rs  yaml_parser.rs
crates/opencli-rs-external/src/: executor.rs  lib.rs
crates/opencli-rs-output/src/: csv_out.rs  format.rs  lib.rs  table.rs
crates/opencli-rs-pipeline/src/: executor.rs
crates/opencli-rs-pipeline/src/steps/: browser.rs  download.rs  fetch.rs  intercept.rs  tap.rs  transform.rs
crates/opencli-rs-pipeline/src/template/: evaluator.rs  filters.rs  mod.rs  parser.rs
deploy/: .env.example  PLAN.md  README.md  SPEC.md  docker-compose.local.yml  docker-compose.yml
deploy/chrome/: Dockerfile  entrypoint-vnc.sh
deploy/daily/: Dockerfile  cdp-discover.sh  crontab  entrypoint.sh  run-daily.sh
deploy/daily/api/: main.py  pyproject.toml  trigger.py
deploy/daily/api/tests/: conftest.py  test_main.py
deploy/grafana/provisioning/dashboards/: autocli.json  dashboards.yml
deploy/grafana/provisioning/datasources/: prometheus.yml
deploy/prometheus/: prometheus.yml
docs/supabase/: ats_jobs_external_url_contract.sql
docs/superpowers/plans/: linkedin-native-recommended.md
docs/superpowers/specs/: 2026-05-02-jd-structured-pipeline-design.md  2026-05-03-ats-form-intelligence-design.md
extension/: manifest.json  package-lock.json  package.json
extension/selector/: content.js
extension/src/: background.ts  cdp.ts  protocol.ts
scripts/: .env.example  apply-supabase-migrations.sh  autocli-baseline.sh  backfill_priority_scores.py  clean_linkedin_jobs.py  install.sh  jd_pipeline.py  jd_pipeline_config.py  jd_pipeline_db.py  jd_pipeline_llm.py  jd_pipeline_preprocess.py  job_priority_config.py  job_priority_scorer.py  requirements.txt  sync_autocli_jobs.py  test_baseline.sh  test_sync_autocli_jobs.py  uv-install.sh
supabase/migrations/: 20260503192000_create_jobs_schema_and_sync_rpc.sql  20260504000001_add_url_hash_to_jobs.sql  20260505000001_add_source_channel_apply_type.sql  20260505000002_drop_url_hash_unique.sql  20260505000003_cleanup_old_linkedin_data.sql  20260509182000_add_priority_scoring_columns.sql  20260509184000_add_backfill_priority_rpc.sql  20260516120000_fix_priority_upsert_data_loss.sql  20260516120100_enable_jobs_jobs_rls.sql  20260516120200_grant_anon_read_jobs_jobs.sql
tests/: test_clean_linkedin_jobs.py  test_job_priority_scorer.py  test_sync_autocli_jobs.py
