[package]
name = "opencli-rs-ai"
version.workspace = true
edition.workspace = true

[dependencies]
opencli-rs-core = { path = "../opencli-rs-core" }
opencli-rs-browser = { path = "../opencli-rs-browser" }
opencli-rs-pipeline = { path = "../opencli-rs-pipeline" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
